tests/baselines/reference/asyncArrowFunction8_es2017.errors.txt
asyncArrowFunction8_es2017.ts(2,19): error TS1109: Expression expected.


==== asyncArrowFunction8_es2017.ts (1 errors) ====
    var foo = async (): Promise<void> => {
      var v = { [await]: foo }
                      ~
!!! error TS1109: Expression expected.
    }